# opengl_tutorial

./: CMakeLists.txt  main.cpp  noneuclidean.cpp  notes.md  test_assimp.cpp
euclid/: engine.cpp  engine.h  sky.h
euclid/core/: camera.cpp  camera.h  collider.cpp  collider.h  frame_buffer.cpp  frame_buffer.h  game_header.h
euclid/geometry/: mesh.cpp  mesh.h  resources.cpp  resources.h  shader.cpp  sphere.h  texture.cpp
euclid/levels/: ground.h  level1.cpp  level1.h  tunnel.h
euclid/object/: floorplan.h  physical.cpp  physical.h  player.cpp  player.h  portal.cpp  portal.h  scene.h
euclid/object/base/: object.cpp  object.h
euclid/util/: timer.h  vector.h
glfw_version/: main.cpp
shaders/: shader.frag  shader.vert
tutorials/: 01_empty_window.cpp  color.cpp  color.h  engine.cpp  engine.h  timer.h
util/: boilerplate.h  file_io.h
